--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
+
+/copsa-api.iml
+.idea/
+copsa-api.iml
+logs/
+resources/
+target/
