--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
+# Project related
 
-/copsa-api.iml
-.idea/
-copsa-api.iml
-logs/
-resources/
+# Java related
+pom.xml
+pom.xml.asc
+*jar
+*.class
+
+# Leiningen
+classes/
+lib/
+native/
+checkouts/
 target/
+.lein-*
+repl-port
+.nrepl-port
+.repl
+
+# Temp Files
+*.orig
+*~
+.*.swp
+.*.swo
+*.tmp
+*.bak
+
+# OS X
+.DS_Store
+
+# Logging
+*.log
+/logs/
+
+# Builds
+out/
+build/
+
+/generic-api.iml
+/.idea/
